add converters to post and filter by approved status